Use directories instead of branches for different versions

--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -1,4 +1,4 @@
-# static nginx, etcd registration, confd and supervisord on trusty
+# static nginx, etcd registration, confd and supervisord on Ubuntu Trusty
 FROM markusma/nginx-etcdregister:1.7
 
 ADD config/etc/confd /etc/confd
